--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
-  "singleQuote": true,
-  "tabWidth": 2,
-  "arrowParens": "always",
-  "trailingComma": "all",
-  "semi": false,
-  "jsxSingleQuote": true,
-  "printWidth": 100,
-  "endOfLine": "auto",
-  "bracketSpacing": true,
-  "useTabs": true
+	"singleQuote": true,
+	"tabWidth": 2,
+	"arrowParens": "always",
+	"trailingComma": "none",
+	"semi": false,
+	"jsxSingleQuote": true,
+	"printWidth": 100,
+	"endOfLine": "auto",
+	"bracketSpacing": true,
+	"useTabs": true
 }
